--- a/portfolio/src/app/components/shared/header/header.component.html
+++ b/portfolio/src/app/components/shared/header/header.component.html
@@ -7,7 +7,9 @@
         <li><a href="">Projects</a></li>
         <li><a href="">Contact</a></li>
       </ul>
-
+      <div class="logo_icon">
+        
+      </div>
       <div class="nav_right">
         <li><a href=""><img src="../../../../assets/img/nav_right_social_media/ins.png" alt=""></a></li>
         <li><a href=""><img src="../../../../assets/img/nav_right_social_media/face.png" alt=""></a></li>
