--- a/portfolio/src/app/components/contact/contact.component.html
+++ b/portfolio/src/app/components/contact/contact.component.html
@@ -1,1 +1,102 @@
-<p>contact works!</p>
+<div class="contact">
+  <div class="container">
+    <div class="row">
+      <div class="col-6">
+        <div class="left_contact">
+          <h1>Collaboration for Advancement</h1>
+          <p>As mentioned on my About Me page, I have just over a year and a half of experience in this field. While it may seem relatively short in terms of expertise, I am confident that my dedication, responsibility, and personal creativity will contribute significantly. I am eager to bring value to your company or organization, and I believe that with my enthusiasm, I can make a meaningful impact.</p>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="form_message">
+          <div class="form">
+            <h3>Send us a message</h3>
+            <div class="form_group">
+              <input type="text" id="full-name" name="full-name" placeholder="Full name*" required>
+            </div>
+
+            <div class="form_group">
+              <input type="email" id="email" name="email" placeholder="Email*" required>
+            </div>
+
+            <div class="form_group">
+              <input type="subject" id="subject" name="subject" placeholder="Subjects" required>
+            </div>
+
+            <div class="form_group">
+              <input type="subject" id="subject" name="subject" placeholder="Subjects" required>
+            </div>
+
+
+            <button><a href="">Contact me</a></button>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="serve">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="high_text">
+          <h1>Services</h1>
+        </div>
+      </div>
+
+      <div class="col-12">
+        <div class="spider_web">
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="faq">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="high_text">
+          <h1>FAQ</h1>
+        </div>
+      </div>
+
+      <div class="col-12">
+        <ul class="faq_content">
+           <li class="small_content">
+            <p>If I weren't in the design field, what do I do for a living?</p>
+
+            <a href=""><p>View more</p></a>
+
+           </li>
+
+           <li class="small_content">
+            <p>My favourite projects in my design career</p>
+            <a href="">View more</a>
+           </li>
+
+           <li class="small_content">
+            <p>My favourite projects in my design career</p>
+            <a href="">View more</a>
+           </li>
+
+           <li class="small_content">
+            <p>How do I typically stay motivated and inspired in my work?</p>
+            <a href="">View more</a>
+          </li>
+
+           <li class="small_content">
+            <p>If I could change something in the design industry, what would I change ?</p>
+            <a href="">View more</a>
+            <ul class="view_more_content">
+              <li><p>hiiiiii</p></li>
+            </ul>
+          </li>
+
+
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
