--- a/portfolio/src/app/components/projects/projects.component.css
+++ b/portfolio/src/app/components/projects/projects.component.css
@@ -1,180 +1,202 @@
-/* Biography */
-
-.biography .bio_infor{
-  display: flex;
-  margin-bottom: 80px;
+.projects{
+  margin: 40px 0 100px 0;
+}
+.content1{
+  margin: 60px 0;
 }
 
+.big_content{
 
-.biography .hight_text h1{
-  font-family: istok;
-  font-size: 80px;
-  text-align: center;
-  margin: 40px 0;
-  font-weight: 800;
-}
-
-.bio_infor .left h3{
-  color: #515151;
-  font-size: 14px;
-  font-weight: 600;
-  font-family: istok;
-  margin-bottom: 10px;
-}
-.bio_infor .left span{
-  color: var(--black-color);
-  font-size: 14px;
-  font-weight: 600;
-  font-family: istok;
-}
-.bio_infor .left p{
-  padding-right: 40px;
-  color: var(--black-color);
-  font-size: 14px;
-  font-family: istok;
-  margin-bottom: 25px;
-  justify-content: center;
-
-}
-/* mid */
-
-.bio_infor .mid{
-  padding: 25px;
-  background-color: var(--white-color);
-  border: 1px solid black;
+  padding: 30px;
   border-radius: 10px;
+  border: 2px solid black;
+  box-shadow: 10px 10px 0px 0px black;
   width: 100%;
-  height: 100%;
-  box-shadow: 10px 7px 0px 0px black;
-}
-.bio_infor .mid {
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
-}
-.bio_infor .mid img{
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 10px;
+
 }
 
 
-
-
-
-.bio_infor .right h3{
-  font-weight: 800;
-  font-size: 60px;
-  font-family: istok;
-}
-
-.bio_infor .right p{
-  font-weight: 800;
-  font-size: 20px;
-  font-family: istok;
-}
-
-
-.bio_infor .right{
-  display: inline-block;
-  width: 100%;
-}
-
-/* .bio_infor .right .r_experience,
-.bio_infor .right .r_complete,
-.bio_infor .right .r_template{
-  width: 100%;
-  margin-bottom: 30px;
-}
-.bio_infor .right .r_experience h3,
-.bio_infor .right .r_experience p,
-.bio_infor .right .r_complete h3,
-.bio_infor .right .r_complete p,
-.bio_infor .right .r_template h3,
-.bio_infor .right .r_template p{
-  text-align: center;
-
+/* .content_right,
+.content_left{
+  height: 150px;
 } */
-.bio_infor .right .r_experience,
-.bio_infor .right .r_complete,
-.bio_infor .right .r_template{
-  margin: 0 0 50px 90px;
-}
-
-
-
-
-/* SKILLS */
-
-.skills{
-  margin-bottom: 100px ;
-}
-.skills .high_text h1{
-  font-family: istok;
-  font-size: 80px;
-  text-align: center;
-  margin: 30px 0;
-  font-weight: 800;
-}
-.skills .high_text p{
-  color: var(--black-color);
-  font-size: 20px;
-  font-family: istok;
-  margin: 20px 0;
-  text-align: center;
-}
-.skills .high_text span{
-  color: var(--black-color);
-  font-size: 20px;
-  font-weight: 600;
-  font-family: istok;
-}
-
-
-.skills .sm_box{
-  padding: 25px;
-  background-color: var(--white-color);
-  border: 1px solid black;
-  border-radius: 10px;
+.big_content .content_right{
   width: 100%;
   height: 100%;
-  box-shadow: 10px 7px 0px 0px black;
-  margin: 20px;
-
-}
-
-.skills .sm_box img{
   position: relative;
-  left: 50%;
-  transform: translate(-50%);
-  height: 45px;
-  width: 45px;
 }
-
-.skills .sm_box h3{
-  text-align: center;
-  font-family: istok;
-  font-size: 20px;
-  margin: 5px 0;
-  font-weight: 800;
-}
-
-.skills .sm_box p{
-  text-align: center;
-  font-family: istok;
-  font-size: 15px;
-  color: rgb(0,0,0,0.65);
-
-}
-
-
-/* Exprience */
-
-.experience{
-  background-image: url("../../../assets/img/experience/background_expe.png");
-  background-size: cover;
-  object-fit: cover;
-  height: 100px;
+.big_content .content_right img{
   width: 100%;
+  height: 100%;
+  object-fit: contain;
+  border-radius: 10px;
+  transition: transform 0.5s, filter 1.5s ease-in-out;
+  position: absolute;
+
 }
+.big_content:hover .content_right img {
+  transform: scale(103%);
+}
+.big_content .content_left p:first-of-type{
+  color: #C94440;
+  font-size: 20px;
+  font-family: istok;
+  margin-top: 20px;
+}
+
+.big_content .content_left h3{
+  color: black;
+  font-size: 36px;
+  font-family: istok;
+  font-weight: 800;
+  margin: 10px 0;
+}
+
+.big_content .content_left p:last-of-type{
+  color: black;
+  font-size: 17px;
+  font-family: istok;
+  margin: 25px 0;
+}
+
+.small_box_content{
+  display: flex;
+}
+.small_box_content img{
+  height: 40px;
+  width: 40px;
+}
+.small_box_content button{
+  padding: 10px;
+  background-color: var(--black-color);
+  border-radius: 10px;
+  margin-left: 20px;
+  border: 2px solid var(--black-color);
+}
+.small_box_content button a{
+  color: var(--white-color);
+  font-family: istok;
+  font-size: 16px;
+  line-height: 100%;
+  text-decoration: none;
+}
+
+.small_box_content button:hover{
+  background-color: var(--white-color);
+  transition: 0.5s;
+}
+.small_box_content button:hover a{
+  color: var(--black-color);
+  font-family: istok;
+  font-size: 16px;
+  line-height: 100%;
+  text-decoration: none;
+  transition: 0.5s;
+}
+
+
+
+.content2 .sm_box{
+  padding: 30px;
+  border-radius: 10px;
+  border: 2px solid black;
+  box-shadow: 10px 10px 0px 0px black;
+  width: 100%;
+
+}
+
+/* ảnh của content nhỏ */
+.content2 .sm_box .img{
+  width: 100%;
+  height: 100%;
+}
+.content2 .sm_box img{
+  width: 100%;
+  height: 100%;
+  transition: transform 0.5s, filter 1.5s ease-in-out;
+}
+
+.sm_box:hover .img img {
+  transform: scale(103%);
+}
+
+.content2 .divide{
+  display: flex;
+
+}
+
+.sm_box .divide{
+  display: flex;
+  position: relative;
+}
+.sm_box .divide img{
+  height: 35px;
+  width: 35px;
+  position: absolute;
+  right: 10%;
+  top: 20%;
+}
+
+/* icon figma */
+.content2 .divide img{
+  width: 40px;
+  height: 40px;
+}
+
+
+
+
+.content2 .sm_box p{
+  color: var(--red-color);
+  font-size: 20px;
+  font-family: istok;
+  margin: 10px 0;
+}
+
+/* chỉnh chữ h3 to hơn */
+.content2 .sm_box h3{
+  color: black;
+  font-size: 30px;
+  font-family: istok;
+  font-weight: 800;
+  margin: 10px 0;
+}
+
+
+/* chỉnh chữ p của thẻ a */
+.content2 .small_content .sm_box a{
+  color: var(--black-color);
+  font-size: 20px;
+  font-family: istok;
+  position: relative;
+  text-decoration: none;
+}
+
+
+/* hover vào thẻ p của thẻ a */
+.content2 .sm_box a::before{
+  position: absolute;
+  content: "";
+  background-color: var(--black-color);
+  height: 1px;
+  width: 100%;
+  bottom: 5px;
+  transform: translateY(-50%);
+}
+
+
+/* hover vào thẻ p của thẻ a */
+.content2 .small_content .sm_box a:hover {
+  color: #C94440;
+}
+.content2 .sm_box a:hover:before{
+  position: absolute;
+  content: "";
+  background-color: var(--red-color);
+  height: 1px;
+  width: 100%;
+  bottom: 5px;
+  transform: translateY(-50%);
+}
+
+
