--- a/portfolio/src/app/components/projects/projects.component.html
+++ b/portfolio/src/app/components/projects/projects.component.html
@@ -1,131 +1,132 @@
-<div class="biography">
-  <div class="container">
-    <div class="col-12">
-      <div class="hight_text">
-        <h1>Passion Fuels Purpose!</h1>
-      </div>
-    </div>
-
-    <div class="col-12">
-      <div class="bio_infor">
-        <div class="col-4">
-          <div class="left">
-            <h3>BIOGRAPHY</h3>
-            <p>Hi, I'm <span>Thanh Nguyen</span>, a web developer and UI/UX designer with a passion for creating beautiful, functional, and user-centered digital experiences. With 1.5 years of experience in the field. I am always looking for new and innovative ways to bring my clients' visions to life.</p>
-            <p>I believe that design is about more than just making things look pretty – it's about solving problems and creating intuitive, enjoyable experiences for users.</p>
-            <p>Whether I'm working on a website, mobile app, or other digital product, I bring my commitment to design excellence and user-centered thinking to every project I work on. I look forward to the opportunity to bring my skills and passion to your next project.</p>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="mid">
-            <img src="../../../assets/img/img_about.png" alt="">
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="right">
-
-            <div class="r_template">
-                <h3>20+</h3>
-                <p>Template</p>
-            </div>
-
-
-
-            <div class="r_complete">
-              <h3>20+</h3>
-              <p>Project Complete</p>
-            </div>
-
-
-
-            <div class="r_experience">
-              <h3>1.5</h3>
-              <p>Years Of Exprience</p>
-            </div>
-
-
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="skills">
+<div class="projects">
   <div class="container">
     <div class="row">
-      <div class="col-12">
-        <div class="high_text">
-          <h1>Skills</h1>
-          <p>All the skills I currently possess and listed below are at the fundamental level, <span>except for UI/UX design skills</span>. The remaining skills I am learning to enhance my product's visual design capabilities.</p>
+      <!-- line 1 -->
+      <div class="content1">
+        <div class="col-12">
+          <div class="big_content">
+            <div class="row">
+              <div class="col-6">
+                <div class="content_right">
+                  <img src="../../../assets/img/project_img/big_img.jpg" alt="">
+                </div>
+              </div>
+
+              <div class="col-6">
+                <div class="content_left">
+                  <p>Featured Project</p>
+                  <h3>Hanoi Start-Up Brother FC</h3>
+                  <p>A feature-rich Crypto Screener App using React, Tailwind CSS, Context API, React Router and Recharts. It shows detail regarding almost all the cryptocurrency. You can easily convert the price in your local currency.</p>
+                  <div class="small_box_content">
+                    <a href=""><img src="../../../assets/img/project_img/webflow_icon.png" alt=""></a>
+                    <button><a href="">Visit Projects</a></button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+      <!-- line 2 -->
+      <div class="content2">
+        <div class="col-12">
+          <div class="small_content">
+            <div class="row">
+              <div class="col-6">
+                <div class="sm_box">
+                  <div class="img">
+                    <img src="../../../assets/img/project_img/small_img.png" alt="">
+                  </div>
+                  <div class="divide">
+                    <h3>NFT collection Website</h3>
+                    <img src="../../../assets/img/project_img/figma_icon.png" alt="">
+                  </div>
+                  <p>Website Template</p>
+                  <a href="">Visit</a>
+                </div>
+              </div>
 
-      <div class="col-12">
-        <div class="top">
-          <div class="row">
-            <div class="col sm_box">
-              <img src="../../../assets/img/skills/design.png" alt="">
-              <h3>UI/UX Design</h3>
-              <p>In addition to this design job, I can also take on music performances, photography, video and image editing, and provide one-on-one English coaching.</p>
+              <div class="col-6">
+                <div class="sm_box">
+                  <div class="img">
+                    <img src="../../../assets/img/project_img/small_img.png" alt="">
+                  </div>
+                  <p>Website Template</p>
+                  <div class="divide">
+                    <h3>NFT collection Website</h3>
+                    <img src="../../../assets/img/project_img/figma_icon.png" alt="">
+                  </div>
+                  <a href="">Visit</a>
+                </div>
+              </div>
             </div>
+          </div>
+        </div>
+      </div>
+      <!-- line 3 -->
+      <div class="content1">
+        <div class="col-12">
+          <div class="big_content">
+            <div class="row">
+              <div class="col-6">
+                <div class="content_right">
+                  <img src="../../../assets/img/project_img/big_img.jpg" alt="">
+                </div>
+              </div>
 
-            <div class="col sm_box">
-              <img src="../../../assets/img/skills/graphic.png" alt="">
-              <h3>Graphic</h3>
-              <p>In addition to this design job, I can also take on music performances, photography, video and image editing, and provide one-on-one English coaching.</p>
+              <div class="col-6">
+                <div class="content_left">
+                  <p>Featured Project</p>
+                  <h3>Hanoi Start-Up Brother FC</h3>
+                  <p>A feature-rich Crypto Screener App using React, Tailwind CSS, Context API, React Router and Recharts. It shows detail regarding almost all the cryptocurrency. You can easily convert the price in your local currency.</p>
+                  <div class="small_box_content">
+                    <a href=""><img src="../../../assets/img/project_img/webflow_icon.png" alt=""></a>
+                    <button><a href="">Visit Projects</a></button>
+                  </div>
+                </div>
+              </div>
             </div>
+          </div>
+        </div>
+      </div>
+      <!-- line 4 -->
+      <div class="content2">
+        <div class="col-12">
+          <div class="small_content">
+            <div class="row">
+              <div class="col-6">
+                <div class="sm_box">
+                  <div class="img">
+                    <img src="../../../assets/img/project_img/small_img.png" alt="">
+                  </div>
+                  <p>Website Template</p>
+                  <div class="divide">
+                    <h3>NFT collection Website</h3>
+                    <img src="../../../assets/img/project_img/figma_icon.png" alt="">
+                  </div>
+                  <a href="">Visit</a>
+                </div>
+              </div>
 
-            <div class="col sm_box">
-              <img src="../../../assets/img/skills/develop.png" alt="">
-              <h3>Develop</h3>
-              <p>In addition to this design job, I can also take on music performances, photography, video and image editing, and provide one-on-one English coaching.</p>
+              <div class="col-6">
+                <div class="sm_box">
+                  <div class="img">
+                    <img src="../../../assets/img/project_img/small_img.png" alt="">
+                    <p>Website Template</p>
+                    <div class="divide">
+                      <h3>NFT collection Website</h3>
+                      <img src="../../../assets/img/project_img/figma_icon.png" alt="">
+                    </div>
+                    <a href="">Visit</a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="col-12">
-        <div class="bottom">
-          <div class="row">
-            <div class="col sm_box">
-              <img src="../../../assets/img/skills/3D.png" alt="">
-              <h3>3D Design</h3>
-              <p>In addition to this design job, I can also take on music performances, photography, video and image editing, and provide one-on-one English coaching.</p>
-            </div>
-
-            <div class="col sm_box">
-              <img src="../../../assets/img/skills/animation.png" alt="">
-              <h3>Animation</h3>
-              <p>In addition to this design job, I can also take on music performances, photography, video and image editing, and provide one-on-one English coaching.</p>
-            </div>
-
-            <div class="col sm_box">
-              <img src="../../../assets/img/skills/freelance.png" alt="">
-              <h3>Freelance</h3>
-              <p>In addition to this design job, I can also take on music performances, photography, video and image editing, and provide one-on-one English coaching.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- <div class="exprience">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <div class="high_text">
-          <h1>Exprience</h1>
-        </div>
-      </div>
-
 
     </div>
   </div>
-</div> -->
-<div class="test hidden">
-  <h1>alooo</h1>
-  <p>cccc</p>
 </div>
