--- a/portfolio/src/app/components/contact/contact.component.css
+++ b/portfolio/src/app/components/contact/contact.component.css
@@ -200,6 +200,7 @@ textarea:focus {
   box-shadow: 5px 5px 0px 0px black;
   padding: 25px;
   justify-content: space-between;
+
 }
 
 .faq .small_content p{
@@ -230,16 +231,90 @@ textarea:focus {
   transform: translateY(-50%);
 }
 
-
-
-
-.faq .view_more_content li{
-  display: none;
+/* .small_content .box_right a{
+  float: right;
 }
-.faq a:hover .view_more_content li{
+
+.small_content .small_box{
+  display: none;
+} */
+
+/* .small_content .box_right:hover .small_box{
+  display: block;
+  position: relative;
+  right: 421%;
+} */
+
+
+/* .faq_content .small_content .box_left:hover .small_box{
   display: block;
   position: absolute;
-  top: 0;
+  top: 100%;
+  height: 100%;
   background-color: red;
+  left: 0;
+  width: 100%;
+  border-radius: 0 0 10px 10px;
+} */
 
+
+
+
+/* test */
+/* .small_content{
+  display: flex;
+  position: relative;
 }
+
+.small_content  a:hover .small_box{
+  display: block;
+  position: absolute;
+  top: 100%;
+  height: 100%;
+  background-color: red;
+  left: 0;
+  width: 100%;
+  border-radius: 0 0 10px 10px;
+}
+ */
+
+
+
+
+.small_content{
+  display: flex;
+  height: fit-content;
+}
+
+.box_left{
+  width: 75.54px;
+  height: 23.2px;
+}
+
+.box_left p{
+  float: right;
+}
+
+.small_box {
+  display: none;
+}
+
+.box_left:hover .small_box{
+	position: relative;
+  width: 575px;
+  right: 565px;
+  display: flex;
+  height: fit-content;
+  flex-wrap: wrap;
+  overflow-x: hidden;
+}
+
+
+/* .faq_content li .small_box li{
+
+
+  position: absolute;
+  background-color: red;
+} */
+
+
