--- a/portfolio/src/app/components/contact/contact.component.html
+++ b/portfolio/src/app/components/contact/contact.component.html
@@ -65,34 +65,50 @@
       <div class="col-12">
         <ul class="faq_content">
            <li class="small_content">
-            <p>If I weren't in the design field, what do I do for a living?</p>
-
-            <a href=""><p>View more</p></a>
-
+            <div class="box_right">
+              <p>If I weren't in the design field, what do I do for a living?</p>
+            </div>
+            <div class="box_left">
+              <a href=""><p>View more</p></a>
+              <div class="small_box">
+                <p>ạkwbfkjawbfjlawsssssssssssssssss</p><p>ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssadasddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddflawnlfkawklf</p>
+              </div>
+            </div>
            </li>
 
            <li class="small_content">
-            <p>My favourite projects in my design career</p>
-            <a href="">View more</a>
+            <div class="box_right">
+              <p>My favourite projects in my design career</p>
+            </div>
+            <div class="box_left">
+              <a href=""><p>View more</p></a>
+            </div>
            </li>
 
            <li class="small_content">
-            <p>My favourite projects in my design career</p>
-            <a href="">View more</a>
+            <div class="box_right">
+              <p>My favourite projects in my design career</p>
+            </div>
+            <div class="box_left">
+              <a href=""><p>View more</p></a>
+            </div>
            </li>
 
            <li class="small_content">
-            <p>How do I typically stay motivated and inspired in my work?</p>
-            <a href="">View more</a>
-          </li>
+            <div class="box_right">
+              <p>How do I typically stay motivated and inspired in my work?</p>
+            </div>
+            <div class="box_left">
+              <a href=""><p>View more</p></a>
+            </div>
+           </li>
 
-           <li class="small_content">
-            <p>If I could change something in the design industry, what would I change ?</p>
-            <a href="">View more</a>
-            <ul class="view_more_content">
-              <li><p>hiiiiii</p></li>
+           <li class="small_content"><p>How do I typically stay motivated and inspired in my work?</p><a href="">View more</a>
+            <ul class="small_box">
+              <li><p>Hellooooooo world</p></li>
             </ul>
-          </li>
+
+           </li>
 
 
         </ul>
