--- a/portfolio/src/app/components/home/home.component.html
+++ b/portfolio/src/app/components/home/home.component.html
@@ -44,7 +44,7 @@
       </div>
 
     </div>
-    <div class="row a">
+    <div class="row">
       <div class="col-6">
         <div class="circle">
             <a href="">Hire Me</a>
