--- a/portfolio/src/app/components/contact/contact.component.html
+++ b/portfolio/src/app/components/contact/contact.component.html
@@ -69,10 +69,10 @@
               <p>If I weren't in the design field, what do I do for a living?</p>
             </div>
             <div class="box_left">
-              <a href=""><p>View more</p></a>
-              <div class="small_box">
-                <p>ạkwbfkjawbfjlawsssssssssssssssss</p><p>ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssadasddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddflawnlfkawklf</p>
-              </div>
+              <button id="btn"><u>View more</u></button>
+            </div>
+            <div class="small_box" id="small_box">
+              As mentioned on my About Me page, I have just over a year and a half of experience in this field. While it may seem relatively short in terms of expertise, I am confident that my dedication, responsibility, and personal creativity will contribute significantly. I am eager to bring value to your company or organization, and I believe that with my enthusiasm, I can make a meaningful impact.
             </div>
            </li>
 
@@ -81,7 +81,10 @@
               <p>My favourite projects in my design career</p>
             </div>
             <div class="box_left">
-              <a href=""><p>View more</p></a>
+              <button id="btn1"><u>View more</u></button>
+            </div>
+            <div class="small_box" id="small_box1">
+              As mentioned on my About Me page, I have just over a year and a half of experience in this field. While it may seem relatively short in terms of expertise, I am confident that my dedication, responsibility, and personal creativity will contribute significantly. I am eager to bring value to your company or organization, and I believe that with my enthusiasm, I can make a meaningful impact.
             </div>
            </li>
 
@@ -90,7 +93,10 @@
               <p>My favourite projects in my design career</p>
             </div>
             <div class="box_left">
-              <a href=""><p>View more</p></a>
+              <button id="btn2"><u>View more</u></button>
+            </div>
+            <div class="small_box" id="small_box2">
+              As mentioned on my About Me page, I have just over a year and a half of experience in this field. While it may seem relatively short in terms of expertise, I am confident that my dedication, responsibility, and personal creativity will contribute significantly. I am eager to bring value to your company or organization, and I believe that with my enthusiasm, I can make a meaningful impact.
             </div>
            </li>
 
@@ -99,16 +105,25 @@
               <p>How do I typically stay motivated and inspired in my work?</p>
             </div>
             <div class="box_left">
-              <a href=""><p>View more</p></a>
+              <button id="btn3"><u>View more</u></button>
+            </div>
+            <div class="small_box" id="small_box3">
+              As mentioned on my About Me page, I have just over a year and a half of experience in this field. While it may seem relatively short in terms of expertise, I am confident that my dedication, responsibility, and personal creativity will contribute significantly. I am eager to bring value to your company or organization, and I believe that with my enthusiasm, I can make a meaningful impact.
             </div>
            </li>
 
-           <li class="small_content"><p>How do I typically stay motivated and inspired in my work?</p><a href="">View more</a>
-            <ul class="small_box">
-              <li><p>Hellooooooo world</p></li>
-            </ul>
-
+           <li class="small_content">
+            <div class="box_right">
+              <p>If I could change something in the design industry, what would I change?</p>
+            </div>
+            <div class="box_left">
+              <button id="btn4"><u>View more</u></button>
+            </div>
+            <div class="small_box" id="small_box4">
+              As mentioned on my About Me page, I have just over a year and a half of experience in this field. While it may seem relatively short in terms of expertise, I am confident that my dedication, responsibility, and personal creativity will contribute significantly. I am eager to bring value to your company or organization, and I believe that with my enthusiasm, I can make a meaningful impact.
+            </div>
            </li>
+
 
 
         </ul>
