--- a/portfolio/src/app/components/about/about.component.html
+++ b/portfolio/src/app/components/about/about.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="col-12">
       <div class="hight_text">
-        <h1>Passion Fuels Purpose!</h1>
+        <h1 animation>Passion Fuels Purpose!</h1>
       </div>
     </div>
 
@@ -25,14 +25,14 @@
           <div class="right">
 
             <div class="r_template">
-                <h3>20+</h3>
+                <h3>+</h3>
                 <p>Template</p>
             </div>
 
 
 
             <div class="r_complete">
-              <h3>20+</h3>
+              <h3>+</h3>
               <p>Project Complete</p>
             </div>
 
