--- a/portfolio/src/app/components/contact/contact.component.html
+++ b/portfolio/src/app/components/contact/contact.component.html
@@ -9,10 +9,10 @@
       </div>
       <div class="col-6">
         <div class="form_message">
-          <div class="form">
+          <div class="form" id="form">
             <h3>Send us a message</h3>
             <div class="form_group">
-              <input type="text" id="full-name" name="full-name" placeholder="Full name*" required>
+              <input type="text" id="full-name" name="full-name" placeholder="Full name*" onblur="form_an()" required>
             </div>
 
             <div class="form_group">
@@ -20,16 +20,13 @@
             </div>
 
             <div class="form_group">
-              <input type="subject" id="subject" name="subject" placeholder="Subjects" required>
+              <input type="subject" id="subject1" name="subject" placeholder="Subjects" required>
             </div>
 
             <div class="form_group">
-              <input type="subject" id="subject" name="subject" placeholder="Subjects" required>
+              <input type="subject" id="subject2" name="subject" placeholder="Subjects" required>
             </div>
-
-
             <button><a href="">Contact me</a></button>
-
           </div>
         </div>
       </div>
@@ -65,11 +62,13 @@
       <div class="col-12">
         <ul class="faq_content">
            <li class="small_content">
-            <div class="box_right">
-              <p>If I weren't in the design field, what do I do for a living?</p>
-            </div>
-            <div class="box_left">
-              <button id="btn"><u>View more</u></button>
+            <div class="box_main">
+              <div class="box_right">
+                <p>If I weren't in the design field, what do I do for a living?</p>
+              </div>
+              <div class="box_left">
+                <button id="btn"><u>View more</u></button>
+              </div>
             </div>
             <div class="small_box" id="small_box">
               As mentioned on my About Me page, I have just over a year and a half of experience in this field. While it may seem relatively short in terms of expertise, I am confident that my dedication, responsibility, and personal creativity will contribute significantly. I am eager to bring value to your company or organization, and I believe that with my enthusiasm, I can make a meaningful impact.
@@ -77,11 +76,13 @@
            </li>
 
            <li class="small_content">
-            <div class="box_right">
-              <p>My favourite projects in my design career</p>
-            </div>
-            <div class="box_left">
-              <button id="btn1"><u>View more</u></button>
+            <div class="box_main">
+              <div class="box_right">
+                <p>My favourite projects in my design career</p>
+              </div>
+              <div class="box_left">
+                <button id="btn1"><u>View more</u></button>
+              </div>
             </div>
             <div class="small_box" id="small_box1">
               As mentioned on my About Me page, I have just over a year and a half of experience in this field. While it may seem relatively short in terms of expertise, I am confident that my dedication, responsibility, and personal creativity will contribute significantly. I am eager to bring value to your company or organization, and I believe that with my enthusiasm, I can make a meaningful impact.
@@ -89,11 +90,13 @@
            </li>
 
            <li class="small_content">
-            <div class="box_right">
-              <p>My favourite projects in my design career</p>
-            </div>
-            <div class="box_left">
-              <button id="btn2"><u>View more</u></button>
+            <div class="box_main">
+              <div class="box_right">
+                <p>My favourite projects in my design career</p>
+              </div>
+              <div class="box_left">
+                <button id="btn2"><u>View more</u></button>
+              </div>
             </div>
             <div class="small_box" id="small_box2">
               As mentioned on my About Me page, I have just over a year and a half of experience in this field. While it may seem relatively short in terms of expertise, I am confident that my dedication, responsibility, and personal creativity will contribute significantly. I am eager to bring value to your company or organization, and I believe that with my enthusiasm, I can make a meaningful impact.
@@ -101,11 +104,13 @@
            </li>
 
            <li class="small_content">
-            <div class="box_right">
-              <p>How do I typically stay motivated and inspired in my work?</p>
-            </div>
-            <div class="box_left">
-              <button id="btn3"><u>View more</u></button>
+            <div class="box_main">
+              <div class="box_right">
+                <p>How do I typically stay motivated and inspired in my work?</p>
+              </div>
+              <div class="box_left">
+                <button id="btn3"><u>View more</u></button>
+              </div>
             </div>
             <div class="small_box" id="small_box3">
               As mentioned on my About Me page, I have just over a year and a half of experience in this field. While it may seem relatively short in terms of expertise, I am confident that my dedication, responsibility, and personal creativity will contribute significantly. I am eager to bring value to your company or organization, and I believe that with my enthusiasm, I can make a meaningful impact.
@@ -113,19 +118,18 @@
            </li>
 
            <li class="small_content">
-            <div class="box_right">
-              <p>If I could change something in the design industry, what would I change?</p>
-            </div>
-            <div class="box_left">
-              <button id="btn4"><u>View more</u></button>
+            <div class="box_main">
+              <div class="box_right">
+                <p>If I could change something in the design industry, what would I change?</p>
+              </div>
+              <div class="box_left">
+                <button id="btn4"><u>View more</u></button>
+              </div>
             </div>
             <div class="small_box" id="small_box4">
               As mentioned on my About Me page, I have just over a year and a half of experience in this field. While it may seem relatively short in terms of expertise, I am confident that my dedication, responsibility, and personal creativity will contribute significantly. I am eager to bring value to your company or organization, and I believe that with my enthusiasm, I can make a meaningful impact.
             </div>
            </li>
-
-
-
         </ul>
       </div>
     </div>
