--- a/portfolio/src/app/components/shared/header/header.component.html
+++ b/portfolio/src/app/components/shared/header/header.component.html
@@ -3,9 +3,9 @@
     <div class="row">
       <ul class="nav_left">
         <li><a href="">Home</a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Projects</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/projects">Projects</a></li>
+        <li><a href="/contact">Contact</a></li>
       </ul>
       <div class="logo_icon">
 
