--- a/portfolio/src/app/components/about/about.component.html
+++ b/portfolio/src/app/components/about/about.component.html
@@ -112,7 +112,7 @@
   </div>
 </div>
 
-<!-- <div class="exprience">
+<div class="experience">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -121,8 +121,69 @@
         </div>
       </div>
 
+      <div class="col-12">
+        <div class="timeline">
 
+
+
+
+
+
+          <div class="container right_container">
+
+            <div class="text_box_right">
+              <div class="logo1">
+                <img src="../../../assets/img/experience/top.png" alt="">
+              </div>
+              <div class="anima1">
+                <h3>Intern UI/UX Design <span>@Futix Lab</span></h3>
+                <p>2021 - 2022 | Techmaster</p>
+                <p>Relevant courses included UI/UX Design, Code Frontend Basic & Advanced.</p>
+                <span class="right_arrow_b"></span>
+                <span class="right_arrow"></span>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="container left_container">
+
+            <div class="text_box_left">
+              <div class="logo2">
+                <img src="../../../assets/img/experience/mid.png" alt="">
+              </div>
+              <div class="anima2">
+                <h3>Intern <span>@Soosky LLC</span></h3>
+                <p>2021 - 2024 | Massachusetts Institute Of Technology (MIT)</p>
+                <p>Relevant courses included Data Structures and Algorithms, Computer Systems Engineering, and Artificial Intelligence.</p>
+                <span class="left_arrow_b"></span>
+                <span class="left_arrow"></span>
+              </div>
+
+            </div>
+          </div>
+
+
+          <div class="container right_container">
+
+            <div class="text_box_right">
+              <div class="logo3">
+                <img src="../../../assets/img/experience/bottom.png" alt="">
+              </div>
+              <div class="anima3">
+                <h3>Intern UI/UX Design <span>@Futix Lab</span></h3>
+                <p>2021 - 2022 | Techmaster</p>
+                <p>Relevant courses included UI/UX Design, Code Frontend Basic & Advanced.</p>
+                <span class="right_arrow_b"></span>
+                <span class="right_arrow"></span>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+      </div>
     </div>
   </div>
-</div> -->
+</div>
 
