--- a/portfolio/src/app/components/shared/header/header.component.html
+++ b/portfolio/src/app/components/shared/header/header.component.html
@@ -2,6 +2,7 @@
   <div class="container">
     <div class="row">
       <ul class="nav_left">
+        <button id="light_dark">Click me</button>
         <li><a href="">Home</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/projects">Projects</a></li>
