--- a/portfolio/src/app/components/about/about.component.css
+++ b/portfolio/src/app/components/about/about.component.css
@@ -222,6 +222,7 @@
   height: 100%;
   width: 100%;
   padding: 60px 0;
+  margin-bottom: 80px;
 }
 .experience .high_text h1{
   font-family: istok;
@@ -242,15 +243,15 @@
 
 /* timeline */
 
-.timeline .left_container{
+.experience .timeline .left_container{
   left: 0%;
 }
-.timeline .right_container{
+.experience .timeline .right_container{
   left: 50%;
 }
 
 
-.timeline .container{
+.experience .timeline .container{
   margin: 0;
   position: relative;
   width: 50%;
@@ -282,7 +283,7 @@
 
 /* logo */
 
-.timeline .logo1{
+.timeline .container:nth-child(1) .logo{
   animation: logo1 1s forwards;
 }
 
@@ -295,7 +296,7 @@
   }
 }
 
-.timeline .logo2{
+.timeline .container:nth-child(2) .logo{
   animation: logo2 1s forwards;
   opacity: 0;
 }
@@ -310,7 +311,7 @@
 }
 
 
-.timeline .logo3{
+.timeline .container:nth-child(3) .logo{
   animation: logo3 1s forwards;
   opacity: 0;
 }
@@ -325,21 +326,21 @@
 }
 
 
-.timeline .logo1{
+.timeline .container:nth-child(1) .logo{
   animation-delay: 0s;
 }
-.timeline .logo2{
+.timeline .container:nth-child(2) .logo{
   animation-delay: 1s;
 }
 
-.timeline .logo3{
+.timeline .container:nth-child(3) .logo{
   animation-delay: 2s;
 }
 
 /* .................................... */
 
 
-.timeline .anima1{
+.timeline .container:nth-child(1) .anima{
   opacity: 0;
   animation: anima1 1s linear forwards;
 }
@@ -357,7 +358,7 @@
 
 
 
-.timeline .anima2{
+.timeline .container:nth-child(2) .anima{
   opacity: 0;
   animation: anima2 1s linear forwards;
 }
@@ -373,7 +374,7 @@
 }
 
 
-.timeline .anima3{
+.timeline .container:nth-child(3) .anima{
   opacity: 0;
   animation: anima3 1s linear forwards;
 }
@@ -390,21 +391,21 @@
 
 
 
-.timeline .anima1{
+.timeline .container:nth-child(1) .anima{
   animation-delay: 0s;
 }
-.timeline .anima2{
+.timeline .container:nth-child(2) .anima{
   animation-delay: 1s;
 }
 
-.timeline .anima3{
+.timeline .container:nth-child(3) .anima{
   animation-delay: 2s;
 }
 
 /* ................................ */
 
 
-.timeline .text_box_left .logo2{
+.experience .timeline .text_box_left .logo{
   position: absolute;
   left: 97%;
   top: 7%;
@@ -416,8 +417,7 @@
 }
 
 
-.timeline .text_box_right .logo1,
-.timeline .text_box_right .logo3{
+.experience .timeline .text_box_right .logo{
   position: absolute;
   left: -3%;
   top: 7%;
@@ -427,18 +427,18 @@
   padding: 5px 5px 3px 5px;
   z-index: 999;
 }
-.timeline img{
+.experience .timeline img{
 
   height: 100%;
   width: auto;
 }
 
 
-.timeline .left_container{
+.experience .timeline .left_container{
 
   position: relative;
 }
-.timeline .left_container:before{
+.experience .timeline .left_container:before{
   position: absolute;
   left: 109%;
   top: 0;
@@ -472,34 +472,32 @@
 
 
 
-.text_box_right h3,
-.text_box_left h3{
+.experience .text_box_right h3,
+.experience .text_box_left h3{
   font-weight: 800;
   font-size: 24px;
   font-family: istok;
 }
-.text_box_right span,
-.text_box_left span{
+.experience .text_box_right span,
+.experience .text_box_left span{
   color:#C94440;
 }
-.text_box_right p:first-of-type,
-.text_box_left p:first-of-type{
+.experience .text_box_right p:first-of-type,
+.experience .text_box_left p:first-of-type{
   font-size: 15px;
   color: rgb(0,0,0,0.55);
   margin: 10px 0;
   font-family: istok;
 }
-.text_box_right p:last-of-type,
-.text_box_left p:last-of-type{
+.experience .text_box_right p:last-of-type,
+.experience .text_box_left p:last-of-type{
   font-size: 15px;
   color: rgb(0,0,0);
   font-family: istok;
 }
 
 
-.timeline .anima1,
-.timeline .anima2,
-.timeline .anima3{
+.experience .timeline .anima{
   position: relative;
   background-color: white;
   padding: 24px;
@@ -509,7 +507,7 @@
 }
 
 
-.left_arrow{
+.experience .left_arrow{
   height: 0;
   width: 0px;
   position: absolute;
@@ -523,7 +521,7 @@
 
 
 
-.left_arrow_b{
+.experience .left_arrow_b{
   height: 0;
   width: 0px;
   position: absolute;
@@ -535,7 +533,7 @@
 
 }
 
-.right_arrow{
+.experience .right_arrow{
   height: 0;
   width: 0px;
   position: absolute;
@@ -550,7 +548,7 @@
 
 
 
-.right_arrow_b{
+.experience .right_arrow_b{
   height: 0;
   width: 0px;
   position: absolute;
@@ -564,7 +562,7 @@
 }
 
 
-.timeline::after{
+.experience .timeline::after{
   content: "";
   position: absolute;
   width: 6px;
@@ -574,11 +572,11 @@
   left: 50%;
   margin-left: 0;
   z-index: 1;
-  animation: moveline 2.25s linear forwards;
+  animation: movee 2.25s linear forwards;
 
 }
 
-@keyframes moveline {
+@keyframes movee {
   0%{
     height: 0;
   }
@@ -586,3 +584,794 @@
     height: 70%;
   }
 }
+
+
+
+/* education */
+
+
+.education .hight_textt h1{
+  font-family: istok;
+  font-size: 80px;
+  text-align: center;
+  margin: 25px 0;
+  font-weight: 800;
+}
+
+.edu_content{
+  margin: 30px 0 100px 0;
+}
+.education .content{
+  position: absolute;
+  left: 0;
+  width: 45%;
+  transform: translateX(60%);
+
+  /* background-color: green; */
+
+}
+.education .content h3{
+  font-family: istok;
+  font-size: 24px;
+  font-weight: 800;
+
+}
+.education .content p:first-of-type{
+  font-family: istok;
+  font-size: 16px;
+  color: rgb(0, 0, 0,0.5);
+
+}
+.education .content p:last-of-type{
+  font-family: istok;
+  font-size: 16px;
+}
+
+
+.edu_content{
+  position: relative;
+}
+
+.edu_content::before{
+  position: absolute;
+  content: "";
+  width: 5px;
+  height: 85%;
+  top: 0;
+  background-color: black;
+  left: 14%;
+  z-index: -2;
+  animation: moveline 3s linear forwards;
+}
+
+
+@keyframes moveline {
+  0%{
+    height: 0;
+  }
+  100%{
+    height: 85%;
+  }
+}
+
+.edu_content .small_content{
+  margin: 40px 0;
+}
+
+.edu_content  .content{
+  position: relative;
+
+}
+
+.content .anh{
+  position: absolute;
+  padding: 17px;
+  left: -32%;
+  background-color: white;
+  border-radius: 50%;
+  border: 3px solid black;
+
+}
+.content .nutdo{
+  position: absolute;
+  padding: 9.5px;
+  left: -30%;
+  top: 10%;
+  background-color: #C94440;
+  border-radius: 50%;
+}
+
+
+
+.content:nth-child(1) .anh,
+.content:nth-child(1) .nutdo{
+  opacity: 0;
+  animation: nutdo1 0s linear forwards;
+}
+@keyframes nutdo1 {
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+}
+
+.content:nth-child(2) .anh,
+.content:nth-child(2) .nutdo{
+  opacity: 0;
+  animation: nutdo2 0.2s linear forwards;
+}
+
+@keyframes nutdo2 {
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+}
+
+
+.content:nth-child(3) .anh,
+.content:nth-child(3) .nutdo{
+  opacity: 0;
+  animation: nutdo3 0.2s linear forwards;
+}
+
+
+@keyframes nutdo3 {
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+}
+
+.content:nth-child(4) .anh,
+.content:nth-child(4) .nutdo{
+  opacity: 0;
+  animation: nutdo4 0.2s linear forwards;
+}
+
+@keyframes nutdo4 {
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+}
+
+
+
+.content:nth-child(1) .anh,
+.content:nth-child(1) .nutdo{
+  animation-delay: 0s;
+}
+.content:nth-child(2) .anh,
+.content:nth-child(2) .nutdo{
+  animation-delay: 1s;
+}
+.content:nth-child(3) .anh,
+.content:nth-child(3) .nutdo{
+  animation-delay: 2s;
+}
+.content:nth-child(4) .anh,
+.content:nth-child(4) .nutdo{
+  animation-delay: 3s;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.content:nth-child(1) .small_content{
+  opacity: 0;
+  animation: small1 1s linear forwards;
+}
+@keyframes small1 {
+  0%{
+    opacity: 0;
+    transform: translateX(20px);
+  }
+  100%{
+    opacity: 1;
+    transform: translateX(-10px);
+  }
+}
+
+.content:nth-child(2) .small_content{
+  opacity: 0;
+  animation: small2 1s linear forwards;
+}
+@keyframes small2 {
+  0%{
+    opacity: 0;
+    transform: translateX(20px);
+  }
+  100%{
+    opacity: 1;
+    transform: translateX(-10px);
+  }
+}
+
+
+.content:nth-child(3) .small_content{
+  opacity: 0;
+  animation: small3 1s linear forwards;
+}
+
+@keyframes small3 {
+  0%{
+    opacity: 0;
+    transform: translateX(20px);
+  }
+  100%{
+    opacity: 1;
+    transform: translateX(-10px);
+  }
+}
+
+
+
+
+.content:nth-child(4) .small_content{
+  opacity: 0;
+  animation: small4 1s linear forwards;
+}
+
+@keyframes small4 {
+  0%{
+    opacity: 0;
+    transform: translateX(20px);
+  }
+  100%{
+    opacity: 1;
+    transform: translateX(-10px);
+  }
+}
+
+
+
+.content:nth-child(1) .small_content{
+  animation-delay: 0s;
+}
+.content:nth-child(2) .small_content{
+  animation-delay: 1s;
+}
+.content:nth-child(3) .small_content{
+  animation-delay: 2s;
+}
+.content:nth-child(4) .small_content{
+  animation-delay: 3s;
+}
+
+
+.serve{
+  margin: 500px 0;
+}
+
+.web_spider{
+
+  position: relative;
+}
+
+
+
+.ngoai h3,
+.trong h3,
+.giua h3{
+  padding: 20px;
+  background-color: var(--black-color);
+  color: var(--white-color);
+  border-radius: 50px;
+  font-size: 18px;
+  font-family: istok;
+}
+
+
+
+
+/* nut ngoai */
+
+.ngoai h3:nth-of-type(1){
+  position: absolute;
+  left: 25%;
+  top: 0%;
+  transform: translate(-50%,-50%);
+}
+.ngoai h3:nth-of-type(2){
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translate(-50%,-50%);
+}
+.ngoai h3:nth-of-type(3){
+  position: absolute;
+  top: 100%;
+  left: 0;
+  transform: translate(50%, -50%);
+}
+.ngoai h3:nth-of-type(4){
+  position: absolute;
+  left: 75%;
+  top: 99%;
+  transform: translate(-50%, -50%);
+
+}
+.ngoai h3:nth-of-type(5){
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translate(50%,-50%);
+}
+
+
+.ngoai h3:nth-of-type(6){
+  position: absolute;
+  left: 75%;
+  top: 0%;
+  transform: translate(-50%,-50%);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* nut giua */
+
+.giua h3:nth-of-type(1){
+  position: absolute;
+  left: 50%;
+  top: 0;
+  transform: translate(-50%,0);
+  /* z-index: 1; */
+}
+.giua h3:nth-of-type(2){
+  position: absolute;
+  left: 0;
+  top: 35%;
+  transform: translate(-50%,-50%);
+}
+.giua h3:nth-of-type(3){
+  position: absolute;
+  left: 0;
+  top: 100%;
+  transform: translate(50%, -50%);
+}
+.giua h3:nth-of-type(4){
+  position: absolute;
+  left: 75%;
+  top: 100%;
+  transform: translate(-30%, -50%);
+}
+.giua h3:nth-of-type(5){
+  position: absolute;
+  left: 100%;
+  top: 35%;
+  transform: translate(-50%,-50%);
+}
+
+
+
+
+
+/* nut trong */
+
+
+.trong h3:nth-of-type(1){
+  position: absolute;
+  left: 50%;
+  top: 0;
+  transform: translate(-50%,0);
+  /* z-index: 1; */
+}
+.trong h3:nth-of-type(2){
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translate(-50%,-50%);
+}
+.trong h3:nth-of-type(3){
+  position: absolute;
+  left: 35%;
+  top: 98%;
+  transform: translate(-25%, -50%);
+}
+
+
+.trong h3:nth-of-type(4){
+  position: absolute;
+  left: 100%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+
+
+
+
+
+.first_button{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+
+}
+
+.first_button button{
+  padding: 30px;
+  background-color: var(--black-color);
+  color: var(--white-color);
+  border-radius: 50px;
+  font-size: 18px;
+  border: 1px solid var(--black-color);
+  cursor: pointer;
+}
+
+.first_button button h3{
+  font-size: 30px;
+  font-weight: 800;
+  font-family: istok;
+}
+
+/* .first_button button:hover{
+  padding: 25px;
+  background-color: var(--white-color);
+  color: var(--black-color);
+  border-radius: 50px;
+  font-size: 18px;
+  border: 1px solid var(--black-color);
+} */
+.web_spider{
+  display: none;
+}
+
+.show
+{
+  display: block;
+}
+
+
+
+.ngoai,
+.giua,
+.trong{
+
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+.ngoai img{
+  height: 650px;
+  width: auto;
+  position: relative;
+}
+
+
+.giua img{
+  height: 500px;
+  width: auto;
+  position: relative;
+}
+
+.trong img{
+  height: 310px;
+  width: auto;
+  position: relative;
+}
+
+
+.trong{
+  opacity: 0;
+  animation: trong 2s forwards;
+
+}
+
+@keyframes trong {
+  0%{
+    opacity: 0;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%,-50%) rotate(-45deg) scale(0.5);
+  }
+  100%{
+    opacity: 1;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%,-50%) rotate(0) scale(1);
+
+  }
+}
+/* Vòng tròn trong cùng */
+
+.vong:nth-child(3) h3:nth-of-type(1){
+  opacity: 0;
+  animation: vong_trong_h3 1s forwards;
+
+}
+
+.vong:nth-child(3) h3:nth-of-type(2){
+  opacity: 0;
+  animation: vong_trong_h3 1s forwards;
+
+}
+
+.vong:nth-child(3) h3:nth-of-type(3){
+  opacity: 0;
+  animation: vong_trong_h3 1s forwards;
+
+}
+
+
+.vong:nth-child(3) h3:nth-of-type(4){
+  opacity: 0;
+  animation: vong_trong_h3 1s forwards;
+
+}
+
+@keyframes vong_trong_h3 {
+  0%{
+    opacity: 0;
+    transform: rotate(20deg);
+  }
+  100%{
+    opacity: 1;
+  }
+}
+
+
+
+.vong:nth-child(3) h3:nth-of-type(1){
+  animation-delay: 2s;
+
+}
+
+.vong:nth-child(3) h3:nth-of-type(2){
+  animation-delay: 3s;
+
+}
+.vong:nth-child(3) h3:nth-of-type(3){
+  animation-delay: 4s;
+
+}
+.vong:nth-child(3) h3:nth-of-type(4){
+  animation-delay: 5s;
+
+}
+
+
+
+/* Vòng tròn giữa */
+
+
+
+.giua{
+  opacity: 0;
+  animation: giua 2s forwards;
+
+}
+
+@keyframes giua {
+  0%{
+    opacity: 0;
+    transform: scale(0);
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%,-50%) rotate(45deg) scale(0.5);
+  }
+  100%{
+    opacity: 1;
+    transform: scale(1);
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%,-50%) rotate(0) scale(1);
+  }
+}
+
+.vong:nth-child(2) h3:nth-of-type(1){
+  opacity: 0;
+  animation: vong_giua_h3 1s forwards;
+
+}
+
+
+.vong:nth-child(2) h3:nth-of-type(2){
+  opacity: 0;
+  animation: vong_giua_h3 1s forwards;
+
+}
+
+.vong:nth-child(2) h3:nth-of-type(3){
+  opacity: 0;
+  animation: vong_giua_h3 1s forwards;
+
+}
+
+.vong:nth-child(2) h3:nth-of-type(4){
+  opacity: 0;
+  animation: vong_giua_h3 1s forwards;
+
+}
+
+.vong:nth-child(2) h3:nth-of-type(5){
+  opacity: 0;
+  animation: vong_giua_h3 1s forwards;
+
+}
+
+@keyframes vong_giua_h3 {
+  0%{
+    opacity: 0;
+    transform: rotate(20deg);
+  }
+  100%{
+    opacity: 1;
+  }
+}
+
+.vong:nth-child(2) h3:nth-of-type(1){
+  animation-delay: 2s;
+}
+
+.vong:nth-child(2) h3:nth-of-type(2){
+  animation-delay: 3s;
+}
+.vong:nth-child(2) h3:nth-of-type(3){
+  animation-delay: 4s;
+}
+
+.vong:nth-child(2) h3:nth-of-type(4){
+  animation-delay: 5s;
+}
+.vong:nth-child(2) h3:nth-of-type(5){
+  animation-delay: 6s;
+}
+
+
+
+/* Vòng tròn ngoài cùng */
+
+
+.ngoai{
+  opacity: 0;
+  animation: ngoai 2s forwards;
+
+}
+
+@keyframes ngoai {
+  0%{
+    opacity: 0;
+    transform: scale(0);
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%,-50%) rotate(-45deg) scale(0.5);
+  }
+  100%{
+    opacity: 1;
+    transform: scale(1);
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%,-50%) rotate(0) scale(1);
+  }
+}
+
+
+.vong:nth-child(1) h3:nth-of-type(1){
+  opacity: 0;
+  animation: vong_ngoai_h3 1s forwards;
+
+}
+
+
+.vong:nth-child(1) h3:nth-of-type(2){
+  opacity: 0;
+  animation: vong_ngoai_h3 1s forwards;
+
+}
+
+
+.vong:nth-child(1) h3:nth-of-type(3){
+  opacity: 0;
+  animation: vong_ngoai_h3 1s forwards;
+
+}
+
+
+.vong:nth-child(1) h3:nth-of-type(4){
+  opacity: 0;
+  animation: vong_ngoai_h3 1s forwards;
+
+}
+
+
+.vong:nth-child(1) h3:nth-of-type(5){
+  opacity: 0;
+  animation: vong_ngoai_h3 1s forwards;
+
+}
+
+
+.vong:nth-child(1) h3:nth-of-type(6){
+  opacity: 0;
+  animation: vong_ngoai_h3 1s forwards;
+
+}
+
+@keyframes vong_ngoai_h3 {
+  0%{
+    opacity: 0;
+    transform: rotate(20deg);
+  }
+  100%{
+    opacity: 1;
+  }
+}
+
+
+
+
+
+
+
+
+
+.vong:nth-child(1) h3:nth-of-type(1){
+  animation-delay: 2s;
+}
+
+.vong:nth-child(1) h3:nth-of-type(2){
+  animation-delay: 3s;
+}
+
+.vong:nth-child(1) h3:nth-of-type(3){
+  animation-delay: 4s;
+}
+
+.vong:nth-child(1) h3:nth-of-type(4){
+  animation-delay: 5s;
+}
+
+.vong:nth-child(1) h3:nth-of-type(5){
+  animation-delay: 6s;
+}
+
+.vong:nth-child(1) h3:nth-of-type(6){
+  animation-delay: 7s;
+}
+
+
+
+
+/* .vong:nth-child(3){
+  animation-delay: 0s;
+}
+.vong:nth-child(2){
+  animation-delay: 0s;
+
+}
+.vong:nth-child(1){
+  animation-delay: 0s;
+
+} */
