--- a/portfolio/src/app/components/about/about.component.html
+++ b/portfolio/src/app/components/about/about.component.html
@@ -125,17 +125,13 @@
         <div class="timeline">
 
 
-
-
-
-
           <div class="container right_container">
 
             <div class="text_box_right">
-              <div class="logo1">
+              <div class="logo">
                 <img src="../../../assets/img/experience/top.png" alt="">
               </div>
-              <div class="anima1">
+              <div class="anima">
                 <h3>Intern UI/UX Design <span>@Futix Lab</span></h3>
                 <p>2021 - 2022 | Techmaster</p>
                 <p>Relevant courses included UI/UX Design, Code Frontend Basic & Advanced.</p>
@@ -149,10 +145,10 @@
           <div class="container left_container">
 
             <div class="text_box_left">
-              <div class="logo2">
+              <div class="logo">
                 <img src="../../../assets/img/experience/mid.png" alt="">
               </div>
-              <div class="anima2">
+              <div class="anima">
                 <h3>Intern <span>@Soosky LLC</span></h3>
                 <p>2021 - 2024 | Massachusetts Institute Of Technology (MIT)</p>
                 <p>Relevant courses included Data Structures and Algorithms, Computer Systems Engineering, and Artificial Intelligence.</p>
@@ -167,10 +163,10 @@
           <div class="container right_container">
 
             <div class="text_box_right">
-              <div class="logo3">
+              <div class="logo">
                 <img src="../../../assets/img/experience/bottom.png" alt="">
               </div>
-              <div class="anima3">
+              <div class="anima">
                 <h3>Intern UI/UX Design <span>@Futix Lab</span></h3>
                 <p>2021 - 2022 | Techmaster</p>
                 <p>Relevant courses included UI/UX Design, Code Frontend Basic & Advanced.</p>
@@ -182,6 +178,124 @@
 
 
         </div>
+      </div>
+
+
+
+
+    </div>
+  </div>
+</div>
+
+<div class="education">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="hight_textt">
+          <h1>Education</h1>
+        </div>
+      </div>
+      <div class="col-12">
+        <div class="edu_content">
+
+          <div class="content">
+            <div class="nut_left">
+              <div class="anh"></div>
+              <div class="nutdo"></div>
+            </div>
+            <div class="small_content">
+              <h3>Bachelor Of Data Science</h3>
+              <p>2021 - 2024 | University Science & Technology Hanoi</p>
+              <p>Relevant courses included Data Structures and Algorithms, Computer Systems Engineering, and Artificial Intelligence.</p>
+            </div>
+          </div>
+
+
+          <div class="content">
+            <div class="nut_left">
+              <div class="anh"></div>
+              <div class="nutdo"></div>
+            </div>
+            <div class="small_content">
+              <h3>IOS Courses</h3>
+              <p>2021 - 2022 | Techmaster</p>
+              <p>Relevant courses included UI/UX Design, Code Frontend Basic & Advanced.</p>
+            </div>
+          </div>
+
+          <div class="content">
+            <div class="nut_left">
+              <div class="anh"></div>
+              <div class="nutdo"></div>
+            </div>
+            <div class="small_content">
+              <h3>Coaching 1-1</h3>
+              <p>2022 - 2023 | Futix Lab</p>
+              <p>Relevant courses included UI/UX Design, Fundamentals of graphics & real-life projects. </p>
+            </div>
+          </div>
+
+          <div class="content">
+            <div class="nut_left">
+              <div class="anh"></div>
+              <div class="nutdo"></div>
+            </div>
+            <div class="small_content">
+              <h3>Online Courses</h3>
+              <p>2022 - 2023 | Das, Uxcel, Skillshare</p>
+              <p>Relevant courses included UX Design, Fundamentals of graphics, Development the projects. </p>
+            </div>
+          </div>
+
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="serve">
+  <div class="container">
+    <div class="row">
+
+      <div class="col-12">
+        <div class="web_spider" id="webbb">
+          <div id="web">
+            <div class="vong ngoai">
+              <img src="../../../assets/img/contact_serve/ngoai.png" alt="">
+              <h3>Visual Design</h3>
+              <h3>Information Plan</h3>
+              <h3>Wireframe Designing</h3>
+              <h3>User testing</h3>
+              <h3>Road map</h3>
+              <h3>Frontend -Dev</h3>
+            </div>
+
+            <div class="vong giua">
+              <img src="../../../assets/img/contact_serve/giua.png" alt="">
+
+              <h3>Frammer</h3>
+              <h3>Shopify</h3>
+              <h3>Balsamiq</h3>
+              <h3>3D Spline</h3>
+              <h3>Sketch</h3>
+            </div>
+
+            <div class="vong trong">
+              <img src="../../../assets/img/contact_serve/trong.png" alt="">
+              <h3>Webflow</h3>
+              <h3>Rive</h3>
+              <h3>Photoshop /Illustrator</h3>
+              <h3>Figma</h3>
+            </div>
+          </div>
+
+        </div>
+        <div class="first_button" id="button_work">
+            <button href="#web"><h3>My Services</h3></button>
+        </div>
+
+
       </div>
     </div>
   </div>
